fix (non-functional) IntelliJ warnings